# cm_plasticity

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
batch/: plot-epochs.sh  process-abfs.sh  scan-cells.sh
inputs/: biocytin_cells.csv  biocytin_cells_dan.csv  cell_info.xlsx  cells.tbl  colocalization.csv  colocalization_epochs.csv  em_counts.csv  immuno_birds.csv  immuno_counts.csv  kv11_puncta.csv  plasticity_epochs.csv  reversal_epochs.csv  spkstep_epochs.tbl
notebooks/: plasticity.ipynb
scripts/: abf2pprox.py  collect.ipynb  colocalization.R  core.py  graphics.py  immuno.R  intracellular.ipynb  misc.R  plasticity.R  plasticity.ipynb  plot-epoch.py  plot-plasticity.py  response-stats.py  reversal.R  scan-epochs.py
