[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"

[tool.poetry]
name = "cm_plasticity"
version = "20220922"
description = "code, figures, and manuscripts for the CM intrinsic physiology project"
authors = ["Yao Lu", "Dan Meliza"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
setuptools = "^65.3.0"
pandas = "^1.4.3"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
neurobank = "^0.9.7"
neo = "^0.11.0"
quickspikes = "^1.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools>=65.3", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

