[pep8]
ignore=E221,E501,E701

[flake8]
ignore = E221,E501,E701
max-line-length = 120
exclude = tests,venv,attic
max-complexity = 10

[metadata]
name = cm_plasticity
version = 2022.09.22
description = code, figures, and manuscripts for the CM intrinsic physiology project
authors = Yao Lu, Dan Meliza

[options]
zip_safe = false
packages = scripts
python_requires = >= 3.9
setup_requires =
    setuptools >=58.1.0
install_requires =
    pandas ~= 1.4.3
    pandarallel ~= 1.6.3
    matplotlib ~= 3.5.2
    neurobank ~= 0.9.7
    neo ~= 0.11.0
    quickspikes ~= 1.4.0
    chebyfit ~= 2022.8.26
    loess ~= 2.1.2
    